# CanidComics-API

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  .projections.json  AUTHORS.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
app/: main.py
app/api/: __init__.py
app/api/core/: config.py
app/core/: config.py
docs/: conf.py  index.rst
src/comics/: __init__.py
tests/: conftest.py
