[tool.poetry]
name = "comics-api"
version = "0.1.0"
description = "Canid Comics backend API"
authors = ["Reyu Zenfold <reyu@reyuzenfold.com>"]
license = "MIT"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
changelog = "^0.5.5"
ipython = "^7.20.0"
pytest = { version = "^6.2.2", optional = true }
pytest-cov = { version = "^2.11.1", optional = true }
uvicorn = "^0.13.4"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
